# nbanim

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
docs/: conf.py  genindex.html  index.md  usage.html
docs/_build/: .buildinfo  index.html  installation.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/_static/: documentation_options.js
docs/_sources/: installation.md.txt  usage.md.txt
nbanim/: core.py
nbanim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
